# tataki

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  extract_id_label.sh
.github/actions/cache_cargo/: action.yaml
.github/workflows/: build_release.yaml  draft-pdf.yaml  rust_ci.yaml
awesome-bioinformatics-file-spec/: code-of-conduct.md  readme.md
cwl/: sam_head.cwl  sam_view.cwl  template.cwl
paper/: paper.bib  paper.md
src/: EDAM_1.25.id_label.csv  args.rs  buffered_read_seek.rs  edam.rs  ext_tools.rs  fetch.rs  foo.rs  lib.rs  logger.rs  main.rs  module.rs  parser.rs  run.rs  source.rs  tataki.conf
src/parser/: bam.rs  bcf.rs  bed.rs  cram.rs  empty.rs  fasta.rs  fastq.rs  gff3.rs  gtf.rs  sam.rs  template.rs  vcf.rs
tests/: README.md  common.rs  integration_tests.rs  sam.cwl  sam_with_shell.cwl
tests/conf/: module_order_test.conf  run_cwl_test.conf
tests/cwl/: python.cwl
tests/cwl_idea/: sam.cwl  sam_command.cwl  toy.fa
tests/inputs/: toy.bam  toy.bcf  toy.bed  toy.cram  toy.fa  toy.fa.fai  toy.fq  toy.gff3  toy.gtf  toy.py  toy.sam  toy.vcf  toy_invalid_flag.sam
tests/outputs/: expected_output.csv  expected_output.json  expected_output.yaml  expected_output_module_order.csv  expected_output_num_records.csv  expected_output_run_cwl.csv
