[package]
name = "tataki"
authors = ["Tazro Ohta (tazro.ohta@chiba-u.jp)"]
version = "0.3.0"
edition = "2021"
repository = "https://github.com/sapporo-wes/tataki"
license = "apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
infer = { version = "0.15.0", default-features = false }
clap = { version = "4.4.18", features = ["derive"] }
nom = "7.1.3"
noodles = { version = "0.60.0", features = [
    "bam",
    "bcf",
    "bed",
    "cram",
    "fasta",
    "fastq",
    "gff",
    "gtf",
    "sam",
    "vcf",
] }
flate2 = { version = "1.0.17", features = ["zlib"], default-features = false }
regex = "1.6.0"
anyhow = "1.0.75"
serde = { version = "1.0.193", features = ["derive"] }
serde_yaml = "0.9.27"
serde_json = "1.0.109"
url = "2.5.0"
reqwest = { version = "0.11.22", features = ["blocking"] }
tempfile = "3.9.0"
csv = "1.3.0"
log = "0.4.20"
env_logger = "0.11.0"
shlex = "1.2.0"
chrono = "0.4.31"
lazy_static = "1.4.0"
bimap = "0.6.3"
openssl = { version = "0.10.63", features = ["vendored"] }
bzip2 = "0.4.4"

[dev-dependencies]
assert_cmd = "2.0.13"
digest = "0.10.7"
predicates = "3.1.0"
sha2 = "0.10.8"
