[package]
name = "tataki"
authors = ["Tazro Ohta (tazro.ohta@chiba-u.jp)"]
version = "0.5.0-alpha"
edition = "2021"
repository = "https://github.com/sapporo-wes/tataki"
license = "apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
infer = { version = "0.19.0", default-features = false }
clap = { version = "4.5.53", features = ["derive"] }
noodles = { version = "0.60.0", features = [
    "bam",
    "bcf",
    "bed",
    "cram",
    "fasta",
    "fastq",
    "gff",
    "gtf",
    "sam",
    "vcf",
] }
flate2 = { version = "1.1.5", features = ["zlib"], default-features = false }
anyhow = "1.0.100"
serde = { version = "1.0.193", features = ["derive"] }
serde_yaml = "0.9.34-deprecated"
serde_json = "1.0.145"
url = "2.5.7"
reqwest = { version = "0.12.26", features = ["blocking"] }
tempfile = "3.23.0"
csv = "1.4.0"
log = "0.4.29"
env_logger = "0.11.8"
shlex = "1.3.0"
chrono = "0.4.42"
lazy_static = "1.5.0"
bimap = "0.6.3"
bzip2 = "0.6.1"
openssl = { version = "0.10.75", features = ["vendored"] }

[dev-dependencies]
assert_cmd = "2.1.1"
digest = "0.10.7"
predicates = "3.1.3"
sha2 = "0.10.9"
